# gedos

./: .codecov.yml  .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  ROADMAP.md  config.yaml  gedos.py  pyproject.toml  pytest.ini  requirements.txt
agents/: __init__.py  gui_agent.py  terminal_agent.py  web_agent.py
core/: __init__.py  audit_log.py  ax_observer.py  behavior_tracker.py  ci_healer.py  config.py  copilot_context.py  github_webhook.py  llm.py  llm_bench.py  mcp_server.py  memory.py  memory_profiler.py  memory_semantic.py  orchestrator.py  proactive_engine.py  retry.py  scheduler.py  security.py  setup_checklist.py  task_planner.py
docs/: continuous-perception.md  demo-placeholder.md  examples.md  github-webhook.md  homebrew.md  mcp.md  multimodal.md  semantic-memory.md  setup-ollama.md  setup.md  web-tool.md
interfaces/: __init__.py  cli.py  i18n.py  telegram_bot.py
tests/: test_ax_observer.py  test_behavior_tracker.py  test_ci_healer.py  test_cli.py  test_config.py  test_github_webhook.py  test_mcp_server.py  test_memory.py  test_memory_semantic.py  test_onboarding.py  test_orchestrator.py  test_patterns_command.py  test_proactive_engine.py  test_retry.py  test_schedule_ux.py  test_scheduler.py  test_scheduler_nl.py  test_security.py  test_task_planner.py  test_terminal_agent.py  test_voice.py  test_voice_command.py  test_voice_kokoro.py  test_voice_output.py  test_web_scraper.py
tools/: __init__.py  ax_tree.py  keyboard.py  language.py  mouse.py  voice.py  voice_kokoro.py  voice_output.py  (+1 more)
(+19 files in other folders)
